<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_background"
    android:orientation="vertical">

    <!-- Тулбар -->

    <!-- Прогресс и локация -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_700"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:backgroundTint="@color/gray"
            android:text="@string/back_button"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/quest_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/quest"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/hints"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="@string/hints"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginEnd="20dp"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/quest_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>


    <!-- Кнопка подсказки внизу -->
    <LinearLayout
        android:id="@+id/layout_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/teal_700"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_hint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:backgroundTint="@color/gray"
            android:text="@string/use_hint"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_next_task"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/gray"
            android:text="@string/next_page"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
